@@ -18,6 +18,14 @@
  */
 package hellbound;
 
+import java.util.logging.Logger;
+
+import com.l2jserver.Config;
+import com.l2jserver.gameserver.handler.AdminCommandHandler;
+import com.l2jserver.gameserver.handler.IAdminCommandHandler;
+import com.l2jserver.gameserver.handler.IVoicedCommandHandler;
+import com.l2jserver.gameserver.handler.VoicedCommandHandler;
+
 import handlers.admincommandhandlers.AdminHellbound;
 import handlers.voicedcommandhandlers.Hellbound;
 import hellbound.AI.Amaskari;
@@ -52,17 +60,8 @@ import hellbound.AI.Zones.TullyWorkshop.TullyWorkshop;
 import hellbound.Instances.DemonPrinceFloor.DemonPrinceFloor;
 import hellbound.Instances.RankuFloor.RankuFloor;
 import hellbound.Instances.UrbanArea.UrbanArea;
-
-import java.util.logging.Logger;
-
 import quests.Q00130_PathToHellbound.Q00130_PathToHellbound;
 import quests.Q00133_ThatsBloodyHot.Q00133_ThatsBloodyHot;
-
-import com.l2jserver.Config;
-import com.l2jserver.gameserver.handler.AdminCommandHandler;
-import com.l2jserver.gameserver.handler.IAdminCommandHandler;
-import com.l2jserver.gameserver.handler.IVoicedCommandHandler;
-import com.l2jserver.gameserver.handler.VoicedCommandHandler;
 
 /**
  * Hellbound class-loader.
@@ -130,7 +129,7 @@ public final class HellboundLoader
 		{
 			try
 			{
-				final Object instance = script.newInstance();
+				final Object instance = script.getDeclaredConstructor().newInstance();
 				if (instance instanceof IAdminCommandHandler)
 				{
 					AdminCommandHandler.getInstance().registerHandler((IAdminCommandHandler) instance);
